<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/entitycolumnnamehdr"/>
        <TextView
            android:id="@+id/column_name"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/edit_column_name"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:hint="@string/entitycolumnnamehdr"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/entitycolumnnamehdr"/>
        <TextView
            android:id="@+id/altcolumn_name"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/edit_altcolumn_name"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:hint="@string/entityaltcolumnnamehdr"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/entitytablenamehdr"/>
        <TextView
            android:id="@+id/owningtable"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/entitycannotbechanged"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/entitycolumntypehdr"
            />
        <TextView
            android:id="@+id/column_type"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:hint="@string/entitycannotbechanged"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/entitycolumnderivedtypehdr"/>
        <TextView
            android:id="@+id/derived_type"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:hint="@string/entitycannotbechanged"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/entitycolumnfinaltypehdr"/>
        <TextView
            android:id="@+id/final_type"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            />
        <Spinner
            android:id="@+id/final_type_spinner"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/entitycolumnobjectelementtype"/>
        <TextView
            android:id="@+id/objectelement_type"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            />
        <Spinner
            android:id="@+id/objectelement_type_spinner"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/entitycolumnnotnullhdr"/>
        <TextView
            android:id="@+id/column_notnull"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            />
        <CheckBox
            android:id="@+id/checkbox_notnull"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/entitycolumnuniquehdr"/>
        <TextView
            android:id="@+id/column_unique"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/entitycannotbechanged"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/entitycolumnnotnullhdr"/>
        <TextView
            android:id="@+id/column_rowidalias"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/entitycannotbechanged"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/entitycolumnautoincrementcoded"/>
        <TextView
            android:id="@+id/column_autoincrementcoded"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/entitycannotbechanged"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/entitycolumndefaultvaluehdr"/>
        <TextView
            android:id="@+id/column_default_value"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/entitycannotbechanged"
            />
    </LinearLayout>
    <Button
        android:id="@+id/donebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donebutton"/>
    <Button
        android:id="@+id/applychangesbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applychangesbutton"/>
</LinearLayout>